# aresticrat

./: Cargo.toml  Cross.toml  LICENSE  README.md  about.toml  aresticrat.example.toml  build.rs  cargo-about.hbs  cargo-about.toml
.gitea/workflows/: push.yml  release.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  try.yml
src/: cli.rs  config.rs  main.rs  restic_api.rs  run.rs
