[package]
name = "aresticrat" # Adjust name in workflows after change
version = "0.1.4"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
config = "0.15"
dotenvy = "0.15"
serde = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
