[package]
name = "aresticrat" # Adjust name in workflows after change
version = "0.3.0"
license = "BSD-2-Clause"

edition = "2021"
rust-version = "1.75"

build = "build.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
config = "0.15"
dotenvy = "0.15"
open = "5"
regex = "1"
serde = "1"
shell-words = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
sha256 = "1.6"
