[package]
name = "aresticrat" # Adjust name in workflows after change
version = "0.3.0"
license = "BSD-2-Clause"

edition = "2021"
rust-version = "1.78"

build = "build.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", features = ["toml"], default-features = false}
dotenvy = "0.15"
open = "5"
serde = { version = "1", features = ["derive"]}
shell-words = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
sha256 = { version = "1.6", default-features = false}
